...

  @override
  Widget build(BuildContext context) {
    var list = launch.docs;

    return ListView.separated(
        key: const Key('launch_list_view'),
        controller: _controller,
        itemBuilder: (context, index) {
          var item = list[index];
          if (index == list.length - 1 && launch.nextPage != null) {
            return Column(
              children: [
                LaunchRocketCard(
                  item: item,
                ),
                const Padding(
                  padding: EdgeInsets.symmetric(vertical: 20),
                  child: CupertinoActivityIndicator(
                    key: Key('launch_list_view_load_more'),
                    radius: 16,
                    color: Colors.white,
                  ),
                )
              ],
            );
...
