...
          automaticallyImplyLeading: false,
          backgroundColor: const Color(0xFF01051A),
          centerTitle: false,
          title: const Text('Space X'),
          actions: [
            AnimSearchBar(
              key: const Key('search_bar'),
              autoFocus: true,
              width: 320,
              rtl: true,
              textController: _searchController,
              onSuffixTap: () {
                //
...
