...
              )
            ],
          ));
    }

    return CarouselSlider(
        key: const Key('launch_detail_carousel_slider'),
        items: images.asMap().entries.map((e) {
          var index = e.key;
          var value = e.value;

          if (index == 0) {
            return Hero(
...
